1.更新语言包,2.直播页面控件显示逻辑

--- a/app/src/main/res/layout/layout_wonderful_list_empty_view.xml
+++ b/app/src/main/res/layout/layout_wonderful_list_empty_view.xml
@@ -24,7 +24,7 @@
         android:layout_below="@id/imgv_empty_layout_icon"
         android:layout_marginTop="@dimen/y20"
         android:gravity="center_horizontal"
-        android:text="@string/NO_CONTENTS_1"
+        android:text="@string/Daily_Great_NO_CONTENTS"
         android:textColor="@color/color_888888"
         android:textSize="@dimen/sp16" />
 
