--- a/app/src/main/res/layout/fragment_mine_share_device_items.xml
+++ b/app/src/main/res/layout/fragment_mine_share_device_items.xml
@@ -1,67 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/ripple_background"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="@dimen/y67"
+    android:orientation="vertical"
+    android:paddingEnd="0dp"
+    android:paddingStart="@dimen/y15">
 
-    <RelativeLayout
-        android:layout_marginLeft="@dimen/x15"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/y67">
 
-        <ImageView
-            android:layout_centerVertical="true"
-            android:id="@+id/iv_share_device_icon"
-            android:src="@drawable/me_icon_head_album"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+    <ImageView
+        android:id="@+id/iv_share_device_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/me_icon_head_album"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <RelativeLayout
-            android:gravity="center_vertical"
-            android:layout_toRightOf="@id/iv_share_device_icon"
-            android:paddingLeft="@dimen/x15"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/y67">
+    <TextView
+        android:id="@+id/tv_share_device_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/y15"
+        android:maxLength="14"
+        android:text="云相框"
+        android:textColor="@color/color_333333"
+        android:textSize="@dimen/sp16"
+        app:layout_constraintBottom_toTopOf="@+id/tv_has_share_num"
+        app:layout_constraintStart_toEndOf="@id/iv_share_device_icon"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
 
-            <TextView
-                android:id="@+id/tv_share_device_name"
-                android:textSize="@dimen/sp16"
-                android:textColor="@color/color_333333"
-                android:text="云相框"
-                android:maxLength="14"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/tv_has_share_num"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_share_device_name"
+        android:paddingTop="@dimen/y7"
+        android:text="5/5"
+        android:textColor="@color/color_8c8c8c"
+        android:textSize="@dimen/sp12"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tv_share_device_name"
+        app:layout_constraintTop_toBottomOf="@+id/tv_share_device_name" />
 
-            <TextView
-                android:id="@+id/tv_has_share_num"
-                android:paddingTop="@dimen/y7"
-                android:layout_below="@id/tv_share_device_name"
-                android:textSize="@dimen/sp12"
-                android:textColor="@color/color_8c8c8c"
-                android:text="5/5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/y1"
+        android:background="@color/color_f2f2f2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tv_share_device_name" />
 
-        <View
-            android:layout_marginLeft="@dimen/x48"
-            android:layout_alignParentBottom="true"
-            android:background="@color/color_f2f2f2"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/y1" />
+    <TextView
+        android:id="@+id/tv_share_device_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/y15"
+        android:background="@drawable/btn_accept_add_request_shape"
+        android:gravity="center"
+        android:text="@string/Tap3_ShareDevice_Button"
+        android:textColor="@color/color_4b9fd5"
+        android:textSize="@dimen/sp13"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_share_device_btn"
-            android:layout_marginRight="@dimen/x15"
-            android:gravity="center"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/btn_accept_add_request_shape"
-            android:text="@string/Tap3_ShareDevice_Button"
-            android:textSize="@dimen/sp13"
-            android:textColor="@color/color_4b9fd5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </RelativeLayout>
-
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
