--- a/app/src/main/res/layout/fragment_mine_share_to_friend_items.xml
+++ b/app/src/main/res/layout/fragment_mine_share_to_friend_items.xml
@@ -1,66 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<layout>
 
-    <RelativeLayout
+    <data>
 
-        android:layout_marginLeft="@dimen/x15"
+    </data>
+
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        style="@style/ripple_background"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y67">
+        android:layout_height="@dimen/y67"
+        android:clickable="true"
+        android:focusable="true"
+        android:paddingEnd="@dimen/y15"
+        android:paddingStart="@dimen/y15">
 
-        <com.cylan.jiafeigou.widget.roundedimageview.RoundedImageView
-            android:layout_centerVertical="true"
+
+        <com.cylan.jiafeigou.support.photoselect.CircleImageView
             android:id="@+id/iv_userhead"
+            style="@style/ripple_background"
+            android:layout_width="@dimen/y50"
+            android:layout_height="@dimen/y50"
+            android:background="@android:color/transparent"
             android:src="@drawable/img_me_list_head"
-            android:layout_width="@dimen/x50"
-            android:layout_height="@dimen/y50" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <RelativeLayout
-            android:gravity="center_vertical"
-            android:layout_toRightOf="@id/iv_userhead"
-            android:paddingLeft="@dimen/x15"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/y67">
+        <TextView
+            android:id="@+id/tv_friend_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/y15"
+            android:text="小名"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp16"
+            app:layout_constraintStart_toEndOf="@+id/iv_userhead"
+            app:layout_constraintTop_toTopOf="@+id/iv_userhead" />
 
-            <TextView
-                android:id="@+id/tv_friend_name"
-                android:textSize="@dimen/sp16"
-                android:textColor="@color/color_333333"
-                android:text="小名"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/tv_friend_account"
-                android:paddingTop="@dimen/y8"
-                android:layout_below="@id/tv_friend_name"
-                android:textSize="@dimen/sp12"
-                android:textColor="@color/color_8c8c8c"
-                android:text="我是小姨"
-                android:singleLine="true"
-                android:ellipsize="end"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
+        <TextView
+            android:id="@+id/tv_friend_account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:paddingTop="@dimen/y8"
+            android:singleLine="true"
+            android:text="我是小姨"
+            android:textColor="@color/color_8c8c8c"
+            android:textSize="@dimen/sp12"
+            app:layout_constraintStart_toStartOf="@+id/tv_friend_name"
+            app:layout_constraintTop_toBottomOf="@+id/tv_friend_name" />
 
         <CheckBox
             android:id="@+id/checkbox_is_share_check"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
             style="@style/CustomCheckboxTheme"
-            android:paddingRight="@dimen/x15"
-            android:paddingTop="@dimen/y15"
-            android:paddingBottom="@dimen/y15"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:clickable="false"
+            android:enabled="false"
+            android:focusable="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
-            android:layout_alignParentBottom="true"
             android:id="@+id/view_line"
-            android:background="@color/color_f2f2f2"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/y1" />
-    </RelativeLayout>
+            android:layout_height="@dimen/y1"
+            android:background="@color/color_f2f2f2"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
-</LinearLayout>
+    </android.support.constraint.ConstraintLayout>
+</layout>
