--- a/app/src/main/res/layout/fragment_share_to_contact_item.xml
+++ b/app/src/main/res/layout/fragment_share_to_contact_item.xml
@@ -1,46 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:clickable="true"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/y67">
+<layout>
 
-    <LinearLayout
-        android:layout_marginLeft="@dimen/x15"
-        android:orientation="vertical"
-        android:layout_centerVertical="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <data>
+
+        <variable
+            name="shared"
+            type="android.databinding.ObservableBoolean" />
+    </data>
+
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        style="@style/ripple_background"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/y67"
+        android:clickable="true"
+        android:focusable="true"
+        android:paddingEnd="0dp"
+        android:paddingStart="@dimen/y15">
+
 
         <TextView
             android:id="@+id/tv_contactname"
-            android:text="小妹"
-            android:textSize="@dimen/sp16"
-            android:textColor="@color/color_33333"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="小妹"
+            android:textColor="@color/color_33333"
+            android:textSize="@dimen/sp16"
+            app:layout_constraintBottom_toTopOf="@+id/tv_contactphone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
 
         <TextView
             android:id="@+id/tv_contactphone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/y8"
             android:text="138384393"
-            android:textSize="@dimen/sp12"
             android:textColor="@color/color_8c8c8c"
+            android:textSize="@dimen/sp12"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/tv_contactname"
+            app:layout_constraintTop_toBottomOf="@+id/tv_contactname" />
+
+        <TextView
+            android:id="@+id/tv_contactshare"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/y15"
+            android:clickable="true"
+            android:focusable="true"
+            android:gravity="center"
+            android:textColor="@color/color_4b9fd5"
+            android:textSize="@dimen/sp13"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_contactshare"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="@dimen/x15"
-        android:gravity="center"
-        android:layout_alignParentRight="true"
-        android:text="@string/Tap3_ShareDevice_Button"
-        android:clickable="true"
-        android:background="@drawable/btn_accept_add_request_shape"
-        android:textSize="@dimen/sp13"
-        android:textColor="@color/color_4b9fd5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-</RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
+</layout>
